# openapi-python-generator

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPENAPI_31_STATUS.md  README.md  codecov.yml  index.html  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  sitemap.xml
.github/workflows/: build_docs.yml  continous_deployment.yml  main.yml  release.yml  tests.yml
acknowledgements/: index.html
docs/: conf.py  index.md  openapi-definition.md  quick_start.md  reference.md  usage.md
docs/acknowledgements/: index.md
docs/references/: index.md  module_usage.md
docs/tutorial/: advanced.md  authentication.md  index.md
js/: custom.js
openapi-definition/: index.html
quick_start/: index.html
references/: index.html
references/module_usage/: index.html
search/: search_index.json
src/openapi_python_generator/: __init__.py  __main__.py  common.py  exceptions.py  generate_data.py  models.py  version_detector.py
src/openapi_python_generator/language_converters/python/: api_config_generator.py  common.py  generator.py  jinja_config.py  model_generator.py  service_generator.py  utils.py
src/openapi_python_generator/language_converters/python/templates/: aiohttp.jinja2  apiconfig.jinja2  apiconfig.template  apiconfig_pydantic_2.jinja2  apisdk.jinja2  enum.jinja2  enum.template  httpx.jinja2  httpx.template  models.jinja2  models.template  models_pydantic_2.jinja2  requests.jinja2  service.jinja2  service.template  union.jinja2
src/openapi_python_generator/parsers/: __init__.py  openapi_30.py  openapi_31.py
tests/: __init__.py  conftest.py  test_api_config.py  test_common_normalize_symbol.py  test_generate_data.py  test_generate_data_negative.py  test_generated_code.py  test_httpx_services.py  test_main.py  test_model_docstring.py  test_model_generator.py  test_model_generator_edges.py  test_openapi_30.py  test_openapi_31.py  test_openapi_31_completeness.py  test_openapi_31_coverage.py  test_openapi_31_schema_features.py  test_service_generator.py  test_service_generator_edges.py  test_swagger_petstore_30.py  test_swagger_petstore_31.py  test_version_detector_edges.py
tests/build_test_api/: api.py
tests/regression/: test_issue_11.py  test_issue_17.py  test_issue_30_87.py  test_issue_31.py  test_issue_51.py  test_issue_55.py  test_issue_7.py  test_issue_71.py  test_issue_87.py  test_issue_9.py  test_issue_illegal_py_symbols.py
tests/test_data/: failing_api.json  gitea_issue_11.json  issue_17.json  issue_30_87.json  issue_51.json  issue_55.json  issue_71.json  issue_71_31.json  issue_87.json  issue_illegal_character_in_operation_id.json  issue_keyword_parameter_name.json  openapi.yaml  openapi_gitea_converted.json  swagger_petstore_3_0_4.yaml  test_api.json  test_api_31.json
tests/test_data/test_api/: __init__.py  api_config.py
tests/test_data/test_api/models/: ApiV1ProductsListPostResponse.py  ApiV1ProductsSearchByImagePostResponse.py  BodyProductGetList.py  BodyProductSearchByImage.py  HtTPValidationError.py  IcolorRead.py  IcompositionRead.py  InextCursor.py  IparameterRead.py  IproductOptionRead.py  IproductRead.py  IresponsePaginatedIproductRead.py  IwholesaleOptionRead.py  ListOrderEnum.py  ProductStatusEnum.py  ValidationError.py  __init__.py
tests/test_data/test_api/services/: __init__.py  async_products_service.py
tutorial/: index.html
tutorial/advanced/: index.html
tutorial/authentication/: index.html
