[tool.poetry]
name = "openapi-python-generator"
version = "0.4.2"
description = "Openapi Python Generator"
authors = ["Marco Müllner <muellnermarco@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MarcoMuellner/openapi-python-generator"
repository = "https://github.com/MarcoMuellner/openapi-python-generator"
documentation = "https://openapi-python-generator.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]
keywords = ["OpenAPI", "Generator", "Python", "async"]

[tool.poetry.urls]
Changelog = "https://github.com/MarcoMuellner/openapi-python-generator/releases"

[tool.poetry.dependencies]
python = "^3.7"
httpx = {extras = ["all"], version = "^0.23.0"}
pydantic = "^1.9.1"
orjson = "^3.7.2"
openapi-schema-pydantic = "^1.2.3"
Jinja2 = "^3.1.2"
click = "^8.1.3"
black = ">=21.10b0"
isort = ">=5.10.1"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
coverage = {extras = ["toml"], version = "^6.4.1"}
darglint = ">=1.8.1"
flake8 = ">=3.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
mypy = ">=0.930"
pep8-naming = ">=0.10.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
pytest-cov = "^3.0.0"
fastapi = "^0.78.0"
uvicorn = "^0.18.1"
respx = "^0.20.1"
aiohttp = "^3.8.3"

[tool.poetry.scripts]
openapi-python-generator = "openapi_python_generator.__main__:main"


[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["openapi_python_generator", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
